--- a/index.html
+++ b/index.html
@@ -16,5 +16,48 @@
 </head>
 <body>
 
+
+  <!-- SITE HEADER -->
+<header class="site-header">
+  <!-- SITE HEADER TOP -->
+  <div class="site-header-top">
+    <div class="site-header-top-container container">
+  <!-- SITE HEADER LOGO -->
+      <a class="site-header-logo" href="index.html" >
+        <img class="site-header-logo-img" src="img/logo-purple.svg" alt="N24 logo" width="264" height="28" >
+      </a>
+
+  <!-- CURRENCY RATES -->
+      <ul class="currency-rates">
+        <li class="currency-rates-item">
+          <b class="currency-rates-type">$</b>
+          <span class="currncy-rates-value">12300.10</span>
+        </li>
+
+        <li class="currency-rates-item">
+          <b class="currency-rates-type">P</b>
+          <span class="currncy-rates-value">150.08</span>
+        </li>
+      </ul>
+  <!-- GLOBAL SEARCH FORM -->
+
+
+  <!-- LANGUAGE TOGGLE -->
+      <div class="lang-toggle">
+        <a class="lang-toggle-link lang-toggle-link-active" href="index.html">УЗ</a>
+        <a class="lang-toggle-link" href="index.html/ru">РУ</a>
+      </div>
+
+  <!-- SITE HEADER AUTH -->
+      <a class="button button-primary" href="#">Войти</a>
+    </div>
+  </div>
+</header>
+
+
+
+
+
+
 </body>
 </html>
