--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
         </li>
       </ul>
   <!-- GLOBAL SEARCH FORM -->
-
+      <form class="global-search-form" action="https://echo.htmlacademy.ru" method="get">
+        <input class="global-search-form-input" type="search" aria-label="Поиск" name="search" placeholder="Поиск" required>
+      </form>
 
   <!-- LANGUAGE TOGGLE -->
       <div class="lang-toggle">
@@ -53,11 +55,6 @@
     </div>
   </div>
 </header>
-
-
-
-
-
 
 </body>
 </html>
