Add header banner image

--- a/index.html
+++ b/index.html
@@ -54,6 +54,32 @@
       <a class="button button-primary" href="#">Войти</a>
     </div>
   </div>
+
+  <!-- SITE MENU -->
+  <div class="container">
+  <!-- SITENAV -->
+  <nav class="sitenav">
+    <ul class="sitenav-list">
+      <li class="sitenav-item"><a class="sitenav-link" href="#" >Главное</a></li>
+      <li class="sitenav-item"><a class="sitenav-link" href="#" >Интересное</a></li>
+      <li class="sitenav-item"><a class="sitenav-link" href="#" >Экономика</a></li>
+      <li class="sitenav-item"><a class="sitenav-link" href="#" >Политика</a></li>
+      <li class="sitenav-item"><a class="sitenav-link" href="#" >Общество</a></li>
+      <li class="sitenav-item"><a class="sitenav-link" href="#" >Технологии</a></li>
+      <li class="sitenav-item"><a class="sitenav-link" href="#" >Спорт</a></li>
+      <li class="sitenav-item"><a class="sitenav-link" href="#" >Культура</a></li>
+      <li class="sitenav-item"><a class="sitenav-link" href="#" >Происшествия</a></li>
+      <li class="sitenav-item"><a class="sitenav-link" href="#" >Наука</a></li>
+    </ul>
+  </nav>
+
+  <!-- sITE HEADER BANNER -->
+  <aside class="site-header-banner">
+    <a class="site-header-banner-link" target="_blank" href="http://olcha.uz">
+      <img src="img/banner-shopping.jpg" alt="Shopping banner 1" width="1200" height="128" srcset="img/banner-shopping.jpg 1x, img/banner-shopping@2x.jpg 2x">
+    </a>
+  </aside>
+  </div>
 </header>
 
 </body>
