--- a/index.html
+++ b/index.html
@@ -194,6 +194,16 @@
 
       </div>
     </section>
+
+    <!-- NOTIFICATION CTA -->
+    <section class="notification-cta">
+      <div class="notification-cta-text">
+        Хотите быть в курсе свежих новостей?
+        <br> Включите уведомления!
+      </div>
+      <button class="button button-orange" type="button">Включит</button>
+    </section>
+
   </div>
 </main>
 
