--- a/index.html
+++ b/index.html
@@ -341,6 +341,77 @@
 
     </div>
   </main>
+  <footer class="site-footer">
+    <div class="container">
+      <div class="site-footer-logo-wrapper">
+        <a class="site-footer-logo" href="index.html">
+          <img class="site-footer-logo-img" src="/img/footer-logo.svg" alt="Footer logo" width="264" height="28">
+        </a>
+      </div>
 
+      <div class="site-footer-about-links">
+        <div class="site-footer-about-link">
+          Воспроизводство, копирование, использование информации с сайта «NAMANGANLIKLAR24.UZ» возможно только с предварительного письменного разрешения редакции.
+        </div>
+
+        <div class="site-footer-links-wrapper">
+          <ul class="site-footer-link">
+            <li class="site-footer-links-item">
+              <a class="site-footer-link-list" href="#">Информация о сайте</a>
+            </li>
+            <li class="site-footer-links-item">
+              <a class="site-footer-link-list" href="#">Напишите нам</a>
+            </li>
+            <li class="site-footer-links-item">
+              <a class="site-footer-link-list" href="#">Реклама</a>
+            </li>
+            <li class="site-footer-links-item">
+              <a class="site-footer-link-list" href="#">Прислать новость</a>
+            </li>
+          </ul>
+
+          <ul class="site-footer-link">
+            <li class="site-footer-links-item">
+              <a class="site-footer-link-list" href="#">Использование материалов</a>
+            </li>
+            <li class="site-footer-links-item">
+              <a class="site-footer-link-list" href="#">Темы дня</a>
+            </li>
+            <li class="site-footer-links-item">
+              <a class="site-footer-link-list" href="#">Наша команда</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <hr class="site-footer-divider">
+
+      <div class="site-footer-socials">
+        <h2 class="site-footer-socials-heading">Наши социальные сети</h2>
+        <ul class="site-footer-socials-list">
+          <li class="site-footer-socials-item">
+            <a class="site-footer-socials-link" href="#" target="_blank" >
+              <img class="site-footer-socials-icon" src="/img/icon-facebook.svg" alt="Facebook" width="25" height="25">
+            </a>
+          </li>
+          <li class="site-footer-socials-item">
+            <a class="site-footer-socials-link" href="#" target="_blank" >
+              <img class="site-footer-socials-icon" src="/img/icon-instagram.svg" alt="Instagram" width="25" height="25">
+            </a>
+          </li>
+          <li class="site-footer-socials-item">
+            <a class="site-footer-socials-link" href="#" target="_blank" >
+              <img class="site-footer-socials-icon" src="/img/icon-telegram.svg" alt="Telegram" width="25" height="25">
+            </a>
+          </li>
+          <li class="site-footer-socials-item">
+            <a class="site-footer-socials-link" href="#" target="_blank" >
+              <img class="site-footer-socials-icon" src="/img/icon-youtube.svg" alt="Youtube" width="25" height="25">
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
