Add contacts page

--- a/news-list.html
+++ b/news-list.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Namanganliklar24</title>
+  <title>News 24</title>
 
   <!-- Google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
