Add bg image to search panel and notification cta panel

--- a/contacts.html
+++ b/contacts.html
@@ -80,9 +80,8 @@
     <div class="container">
       <div class="contact-page">
         <h1 class="contact-page-heading">Напишите нам</h1>
-        <div class="contact-page-heading">
+        <div class="contact-page-content">
           <form class="contact-page-form form" action="https://echo.htmlacademy.ru" method="POST">
-
             <div class="form-fields">
               <div class="form-groups-wrapper">
                 <div class="form-group">
@@ -104,15 +103,26 @@
           </form>
 
           <div class="contacts-page-info">
-            <dl class="definitions-card">
+            <dl class="contact-page-definitions-card definitions-card">
               <div class="definitions-card-item">
                 <dt class="definitions-card-title">Электронная почта</dt>
-                <dd class="definitions-card-value">info@namanganliklar24.uz<dd>
-                </div>
+                <dd class="definitions-card-value"><a href="mailto:info@namanganliklar24.uz?subject=Saytga%20yozish">info@namanganliklar24.uz</a></dd>
+              </div>
+
+              <div class="definitions-card-item">
+                <dt class="definitions-card-title">Номер телефона</dt>
+                <dd class="definitions-card-value"><a href="tel:+998995725486">+998 99 572-54-86</a></dd>
+              </div>
+
+              <div class="definitions-card-item">
+                <dt class="definitions-card-title">Адрес</dt>
+                <dd class="definitions-card-value">Ташкент, Площадь Мустакиллик, 6</dd>
+              </div>
             </dl>
           </div>
         </div>
       </div>
+
     </div>
   </main>
 
